# formula1

./: .gitignore  CLAUDE.md  Makefile  README.md  verify_f1.py
.github/: CODEOWNERS  pull_request_template.md
precompute/: README.md  pyproject.toml
precompute/fixtures/: tiny_stream.jsonStream
precompute/fixtures/mini-race/2026/2026-03-08_Australian_Grand_Prix/2026-03-07_Qualifying/: SessionInfo.json  TimingAppData.jsonStream  TyreStintSeries.jsonStream
precompute/fixtures/mini-race/2026/2026-03-08_Australian_Grand_Prix/2026-03-08_Race/: DriverList.jsonStream  LapCount.jsonStream  SessionInfo.json  TimingData.jsonStream  TrackStatus.jsonStream  TyreStintSeries.jsonStream
precompute/fixtures/mini-race/2026/2026-03-15_Chinese_Grand_Prix/2026-03-13_Practice_1/: SessionInfo.json
precompute/fixtures/mini-race/2026/2026-03-15_Chinese_Grand_Prix/2026-03-13_Sprint_Qualifying/: SessionInfo.json  TyreStintSeries.jsonStream
precompute/fixtures/mini-race/2026/2026-03-15_Chinese_Grand_Prix/2026-03-14_Qualifying/: SessionInfo.json  TyreStintSeries.jsonStream
precompute/fixtures/mini-race/2026/2026-03-15_Chinese_Grand_Prix/2026-03-14_Sprint/: LapCount.jsonStream  SessionInfo.json  TimingData.jsonStream  TrackStatus.jsonStream  TyreStintSeries.jsonStream
precompute/src/f1/: __init__.py  build.py  driver_meta.py  inventory.py  models.py  parse.py  reduce.py  schema.py  track_status.py
precompute/tests/: conftest.py  test_build.py  test_driver_meta.py  test_inventory.py  test_models.py  test_parse.py  test_race_stints.py  test_reduce.py  test_track_status.py
(+120 files in other folders)
