[project]
name = "f1-precompute"
version = "0.1.0"
description = "Precompute F1 tyre inventory JSON from live-timing archive"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.5",
]

[project.scripts]
f1-build = "f1.build:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/f1"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --strict-markers --cov=f1 --cov-report=term-missing --cov-fail-under=85"

[tool.mypy]
strict = true
python_version = "3.13"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "N", "B", "SIM"]
